style.css
body {
  background-color: #303030;
  color: black;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

button {
  margin: 0;
  border: 0;
  background-color: white;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

button:hover {
  color: black;
  cursor: pointer;
}

button,
button:active,
button:focus {
  outline: none;
}

.map,
.viewer-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw !important;
  height: 100vh !important;
}

.map {
  animation: .15s 2s ease fadeIn both;
  will-change: contents;
}

.map > img {
  transform: translateZ(0);
  opacity: .01;
  aspect-ratio: 1 / 1;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.map-select {
  display: inline-block;
  position: fixed;
  z-index: 1;
  top: 80px;
  right: auto;
  left: 50%;
  height: 42px;
  padding-right: 34px;
  padding-left: 8px;
  transform: translate(-50%, 0);
  outline: 0;
  background-color: white;
  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3C!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 330 330' style='enable-background:new 0 0 330 330;' xml:space='preserve'%3E%3Cpath id='XMLID_225_' d='M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
  background-repeat: no-repeat;
  background-position: calc(100% - 14px) calc(50% + 1px);
  background-size: 14px;
  box-shadow: 0 2px 3px 1px rgb(0 0 0 / 30%);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 14px;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

@media screen and (min-width: 1200px) {
  .map-select {
    top: 20px;
    right: 24px;
    left: auto;
    height: 48px;
    padding-top: 4px;
    padding-right: 40px;
    padding-bottom: 4px;
    padding-left: 16px;
    transform: none;
    border-radius: 4px;
  }
}

.map-switcher {
  display: flex;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 50%;
  min-width: 280px;
  margin-top: 20px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  transform: translate(-50%, 0);
  border-radius: 14px;
  background-color: rgba(220, 220, 220, .95);
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.map-switcher__button {
  height: 40px;
  padding-right: 20px;
  padding-bottom: 0;
  padding-left: 20px;
  transition: background-color .15s ease;
  border: 0;
  border-bottom: 1px solid transparent;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, .0);
  font-size: 14px;
}

.map-switcher__button:hover {
  border-bottom: 1px solid rgba(0, 0, 0, .15);
  background-color: rgba(255, 255, 255, .7);
}

.map-switcher__button:active,
.map-switcher__button_active {
  border-bottom: 1px solid rgba(0, 0, 0, .25);
  background-color: rgba(255, 255, 255, 1);
  color: black;
  cursor: auto;
}

.map-switcher__button:nth-child(2) {
  margin-right: 5px;
  margin-left: 5px;
}

.legend__menu {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  width: 37vw;
  height: 100vh;
  padding: 0 8px 0 0;
  overflow: auto;
  transform: translateX(calc(-92vw - 9px));
  transition: transform .275s;
  background: white;
  box-shadow: 1px 0 15px rgba(0,0,0.05);
}

.legend__menu img {
  display: none;
  max-width: 100%;
}

.legend__button {
  display: inline-block;
  position: fixed;
  z-index: 2;
  bottom: 50%;
  left: 0;
  padding: 10px 28px;
  transform: translate(-43px, 70%) rotate(-90deg);
  transition: all .225s ease;
  border: 0;
  border-radius: 0 0 16px 16px;
  background-color: rgba(255, 255, 255, .85);
  box-shadow: -2px 2px 2px rgba(0, 0, 0, .4);
  font-size: 17px;
}

.legend__button:hover {
  background-color: rgba(255, 255, 255, 1);
}

.legend_open .legend__menu {
  width: 92vw;
  transform: translateX(0);
}

.legend_open .legend__button {
  transform: translate(calc(92vw - 32px), 50%) rotate(-90deg);
}

.legend_open .legend__menu img {
  display: block;
}

@media screen and (min-width: 1200px) {
  .legend_open .legend__menu {
    width: 37vw;
  }

  .legend_open .legend__button {
    transform: translate(calc(37vw - 33px), 50%) rotate(-90deg);
    transition: transform .175s;
  }
}

.zoom {
  display: flex;
  position: fixed;
  z-index: 1;
  top: 50%;
  right: 8px;
  flex-direction: column;
  transform: translate(0, -50%);
  border-radius: 50px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.zoom__button {
  width: 45px;
  height: 48px;
  transition: all .1s ease;
  color: rgba(0, 0, 0, .75);
  font-size: 32px;
}

@media screen and (min-width: 991px) {
  .zoom {
    right: 24px;
  }
}

.zoom__button:hover,
.zoom__button:active {
  background-color: #E0E0E0;
}

.zoom__button_plus {
  padding-bottom: 2px;
  border-bottom: 1px solid rgba(0, 0, 0, .2);
  border-radius: 50px 50px 0px 0px;
}

.zoom__button_minus {
  padding-top: 0px;
  padding-bottom: 3px;
  border-radius: 0px 0px 50px 50px;
}

.contact-button {
  display: inline-block;
  position: fixed;
  z-index: 2;
  bottom: 34px;
  left: 50%;
  padding: 10px 28px;
  transform: translateX(-50%);
  transition: all .225s ease;
  border: 0;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, .9);
  box-shadow: 0 4px 7px rgb(0 0 0 / 40%);
  color: #1a1a1a;
  font-size: 16px;
  text-decoration: none;
}

.contact-button:hover {
  background-color: rgba(255, 255, 255, 1);
}

@media screen and (min-width: 991px) {
  .contact-button {
    right: 24px;
    left: auto;
    transform: none;
  }
}

.about-link {
  position: fixed;
  left: 50%;
  transform: translate(-50%);
  bottom: 10px;
  color: white;
  font-size: 13px;
}

@media screen and (min-width: 991px) {
  .about-link {
    right: 32px;
    left: auto;
    transform: none;
  }
}

.loader {
  display: inline-block;
  position: fixed;
  top: 50%;
  left: 50%;
  width: 80px;
  height: 80px;
  transform: translate(-50%, -50%);
}

.loader div {
  position: absolute;
  top: 33px;
  width: 13px;
  height: 13px;
  animation-timing-function: cubic-bezier(0, 1, 1, 0);
  border-radius: 50%;
  background: #fff;
}

.loader div:nth-child(1) {
  left: 8px;
  animation: loader1 0.6s infinite;
}

.loader div:nth-child(2) {
  left: 8px;
  animation: loader2 0.6s infinite;
}

.loader div:nth-child(3) {
  left: 32px;
  animation: loader2 0.6s infinite;
}

.loader div:nth-child(4) {
  left: 56px;
  animation: loader3 0.6s infinite;
}

@keyframes loader1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes loader3 {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
@keyframes loader2 {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(24px, 0);
  }
}

